<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutusActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar4"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:paddingHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="50sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutus1"
                android:textColor="@color/colorAccent1"
                android:textSize="30sp" />
            <!--<TextView
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="Reach us:"
                />-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <ImageView
                    android:layout_marginRight="5dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:tint="@color/colorPrimaryDark"
                    android:src="@drawable/ic_baseline_email_24" />

                <TextView
                    android:selectAllOnFocus="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:text="@string/email_text" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_marginRight="5dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_baseline_phone_24"
                    app:tint="@color/colorPrimaryDark" />

                <TextView
                    android:selectAllOnFocus="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:text="@string/phone_text" />
            </LinearLayout>
            <TextView
                android:textStyle="bold"
                android:layout_marginVertical="10dp"
                android:id="@+id/policylinktext"
                android:text="@string/privacytextstring"
                android:linksClickable="true"
                android:clickable="true"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@color/colorPrimaryDark" />
            <Button
                android:id="@+id/sendFeedbackButton"
                android:text="Send Feedback"
                android:textSize="25sp"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
